--- a/docs/en-gb/modules/business-decisions/pages/myview-dashboard.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/myview-dashboard.adoc
@@ -223,7 +223,7 @@ Decide which users should see the default view.  You can also restrict or allow 
 
 Open the editing mode (icon:design_inline_edit[set=plenty]) for an already existing <<#407, dashboard view>>. Click on *Rights management* to access the settings for users and user roles and decide which dashboard view(s) should be visible for them.
 
-Additional information and instructions on how to assign rights to users or roles are available on the xref:business-decisions:user-accounts-access.adoc#112[User accounts and access] page of the manual.
+Additional information and instructions on how to assign rights to users or roles are available on the xref;business-decisions:user-accounts-access.adoc#112[User accounts and access] page of the manual.
 
 [#409]
 === Determining visibility of dashboard views
@@ -351,7 +351,7 @@ include::partial$new-dashboard-element.adoc[]
 
 | *Conditional colouring*
 a| Do you want to display the tile in a particular colour? To do so, select the option *Display* and click on (icon:settings[set=material]). A settings window opens. On the left, select the colour for the tile. If you want the colour of the tile to change according to the value of the key figure, select an *Operator* and enter a *Comparison value* before clicking on *Save*. +
-*_Optional:_* Enter a URL in the *Link* field. If the selected condition is fulfilled, this URL will be opened when users click on the tile. You can enter two types of links: +
+*_Optional:_*Enter a URL in the *Link* field. If the selected condition is fulfilled, this URL will be opened when users click on the tile. You can enter two types of links: +
 
 * Internal link: An internal link opens a menu within the back end of your plentymarkets system. To do so, enter the route of the menu that should be opened beginning with a */*. The link has to include everything displayed in the URL of the menu after the *terra* component. +
 *_Example:_* If the order overview should be opened when clicking on the button, enter the link */order/order-search*. +
@@ -363,7 +363,7 @@ a| Do you want to display the tile in a particular colour? To do so, select the 
 | Use this setting to add a customised option to the *Actions* menu (icon:more_vert[set=material, role=blue]) on the tile. You can also determine conditions that have to be fulfilled for the option to be displayed, and decide what happens if users click on the option. +
 Click on (icon:settings[role=darkGrey]) to add one or more shortcuts.
 
-|[#intable-tile-details]*Link to detailed dashboard view*
+[#intable-tile-details]*Link to detailed dashboard view*
 | Select which already existing dashboard view should be opened of you open the *Actions* menu icon:more_vert[set=material, role=blue] on the tile and select the option *Tile details*. +
 If you select the option *None*, a default dashboard view provided by the system is opened when you clicked on *Tile details*. This dashboard view contains more detailed information on the results and the data of the key figure that has been selected as a basis of the tile.
 
@@ -465,8 +465,8 @@ Carrying out settings for rows:
 | Decide if the unit of the key figure should be displayed in the row.
 
 | *Conditional colouring*
-a| Do you want to display the row in a particular colour? To do so, select the option *Display* and click on (icon:settings[set=material]). A settings window opens. On the left, select the colour for the row. If you want the colour of the tile to change according to the value of the key figure, select an *Operator* and enter a *Comparison value* before clicking on *Save*. +
-*_Optional:_* Enter a URL in the *Link* field. If the selected condition is fulfilled, this URL will be opened when users click on the row. You can enter two types of links: +
+| Do you want to display the row in a particular colour? To do so, select the option *Display* and click on (icon:settings[set=material]). A settings window opens. On the left, select the colour for the row. If you want the colour of the tile to change according to the value of the key figure, select an *Operator* and enter a *Comparison value* before clicking on *Save*. +
+*_Optional:_*Enter a URL in the *Link* field. If the selected condition is fulfilled, this URL will be opened when users click on the row. You can enter two types of links: +
 
 * Internal link: An internal link opens a menu within the back end of your plentymarkets system. To do so, enter the route of the menu that should be opened beginning with a */*. The link has to include everything displayed in the URL of the menu after the *terra* component. +
 *_Example:_* If the order overview should be opened when clicking on the button, enter the link */order/order-search*. +
@@ -478,7 +478,7 @@ a| Do you want to display the row in a particular colour? To do so, select the o
 | Use this setting to add a customised option to the *Actions* menu (icon:more_vert[set=material]) on the row. You can also determine conditions that have to be fulfilled for the option to be displayed, and decide what happens if users click on the option. +
 Click on (icon:settings[role=darkGrey]) to add one or more shortcuts.
 
-|[#intable-row-details]*Link to detailed dashboard view*
+[#intable-row-details]*Link to detailed dashboard view*
 | Select which already existing dashboard view should be opened when users click on the *Actions* (icon:more_vert[set=material] menu next to the row and select the option *Row details*. +
 If you select the option *None*, a default dashboard view provided by the system is opened when you click on *Row details*. This dashboard view contains more detailed information on the results and the data of the key figure that has been selected as the basis of the row.
 
@@ -807,11 +807,11 @@ Carrying out settings for bar charts and line graphs:
 
 | *Time interval*
 | This setting narrows down the values of the selected *Period*. Thus, the time interval always has to be shorter than the selected *Period*. +
-*_Example:_* If you have selected the current month as *Period* and the option *Week* as *Time interval*, the values for each completed week of the current month will be displayed as separate bar or graph.
+*_Example:_*If you have selected the current month as *Period* and the option *Week* as *Time interval*, the values for each completed week of the current month will be displayed as separate bar or graph.
 
 | *Additional time interval*
 | This setting displays additional buttons on the top right of the bar chart or line graph. These buttons allow you to filter the data displayed in the graph according to additional time intervals. This way, you can easily switch between different time intervals. Activate one or more of the options *Day*, *Month*, *Quarter* or *Year*. +
-*_Example:_* If you have previously selected the current month for the option *Time interval*, you can use the additional time interval to display buttons that display the data filtered by days or weeks when you click on them.
+*_Example:_*If you have previously selected the current month for the option *Time interval*, you can use the additional time interval to display buttons that display the data filtered by days or weeks when you click on them.
 
 | *Click on bar for precise time interval* (only available for bar charts)
 | Activate this option to display the data of the bar chart for the next smaller time interval. You can click on the bar repeatedly, until the smallest time interval (days) has been reached. Use the button *Reset interval* on the top right of the diagram to quickly return to the original display of data.
@@ -882,11 +882,11 @@ Carrying out settings for simple bar charts:
 
 | *Time interval*
 | This setting narrows down the values of the selected *Period*. Thus, the time interval always has to be shorter than the selected *Period*. +
-*_Example:_* If you have selected the current month as *Period* and the option *Week* as *Time interval*, the values for each completed week of the current month will be displayed as separate bar or graph.
+*_Example:_*If you have selected the current month as *Period* and the option *Week* as *Time interval*, the values for each completed week of the current month will be displayed as separate bar or graph.
 
 | *Additional time interval*
 | This setting displays additional buttons on the top right of the bar chart or line graph. These buttons allow you to filter the data displayed in the graph according to additional time intervals. This way, you can easily switch between different time intervals. Activate one or more of the options *Day*, *Month*, *Quarter* or *Year*. +
-*_Example:_* If you have previously selected the current month for the option *Time interval*, you can use the additional time interval to display buttons that display the data filtered by days or weeks when you click on them.
+*_Example:_*If you have previously selected the current month for the option *Time interval*, you can use the additional time interval to display buttons that display the data filtered by days or weeks when you click on them.
 
 | *Click on bar for precise time interval*
 | Activate this option to display the data of the bar chart for the next smaller time interval. You can click on the bar repeatedly, until the smallest time interval (days) has been reached. Use the button *Reset interval* on the top right of the diagram to quickly return to the original display of data.
@@ -1110,7 +1110,7 @@ Carrying out settings for funnel charts:
 
 | *Additional time interval*
 | This setting displays additional buttons on the top right of the bar chart or line graph. These buttons allow you to filter the data displayed in the graph according to additional time intervals. This way, you can easily switch between different time intervals. Activate one or more of the options *Day*, *Month*, *Quarter* or *Year*. +
-*_Example:_* If you have previously selected the current month for the option *Time interval*, you can use the additional time interval to display buttons that display the data filtered by days or weeks when you click on them.
+*_Example:_*If you have previously selected the current month for the option *Time interval*, you can use the additional time interval to display buttons that display the data filtered by days or weeks when you click on them.
 
 | *Number of columns*
 | Select how many units of the selected time interval should be displayed in the graph or chart. The starting point depends on the selected time period.
@@ -1227,7 +1227,7 @@ Displaying formatted text:
 → The settings menu opens.
 . In the settings menu, select the element *Formatted text* and drag-and-drop it to the desired position.
 . Click on the element *Formatted text* and enter the desired text in the settings menu. +
-*_Optional:_* Use the available formatting options for bold, italic or underlined text and for adding bullet points.
+*_Optional_*: Use the available formatting options for bold, italic or underlined text and for adding bullet points.
 . *Save* (icon:save[set=plenty]) the settings. +
 → The text is permanently displayed within the area.
 
@@ -1282,6 +1282,25 @@ a|Enter a link that should be opened when clicking on the button. There are 2 wa
 == General functions
 
 In the following chapters, you will find information on general functions that you can use to manage the contents of your dashboard and facilitate overview.
+
+[#817]
+=== Copying an element
+
+Have you set up a <<#410, tile or another element>> on your dashboard and want to use this element again with similar settings, but don’t want to carry out all settings once again?
+
+Then, you can copy already existing elements in an area and paste it to the same area. Initially, the settings of the new element are identical to the settings of the original element. After you have pasted the element, you can adjust the settings according to your needs and thus change its appearance. The original element will remain unchanged.
+
+[.instruction]
+Copying an element:
+
+. Open the editing mode of the dashboard view (icon:design_inline_edit[set=plenty]).
+. Open the editing mode of the area (icon:pencil[role="blue"]).
+. Move the cursor over the element that you want to copy.
+. Click on *Copy* (icon:content_copy[set=material, role=”blue”]).
+. On the upper right corner of the area, click on *Paste* (icon:content_paste[set=material, role="blue"]). +
+→ The element is added.
+. Move the cursor over the new element and click on *Edit* (icon:pencil[role="blue"]) to adjust the settings for the element.
+. *Save* (icon:save[set=plenty]) the settings.
 
 [#840]
 === Adjusting the global time interval
