--- a/docs/en-gb/modules/markets/partials/activate-payment-method.adoc
+++ b/docs/en-gb/modules/markets/partials/activate-payment-method.adoc
@@ -1,11 +1,23 @@
-As soon as an active account for {market} exists, the payment method *{payment-method}* is automatically available in your plentymarkets system. No separate configurations are needed for this. You just need to permit the payment method in one or more customer classes.
+The payment method *{payment-method}* is automatically available in your plentymarkets system as soon as an active {market} account exists. No separate configurations are needed for this. You just need to permit the payment method in one or more customer classes.
+
+[.collapseBox]
+.What are customer classes?
+--
+Customer classes allow you to divide your customer base according to specific criteria. Examples of use for customer classes are:
+
+* Create two separate customer classes for end customers (B2C) and business customers (B2B) respectively. Depending on the customer class, customers either see net prices or gross prices in your plentyShop.
+* Give discounts to specific customer classes.
+
+For more information about customer classes, head over to the to the xref:crm:preparatory-settings.adoc#create-customer-class[Managing contacts] page.
+
+--
 
 //tag::mop-customer-class[]
 [.instruction]
 Permitting the payment method in a customer class:
 
-. Go to *Setup » CRM » Classes*.
+. Go to *Setup » CRM » Customer classes*.
 . Open the customer class for which you want to permit the payment method.
-. For the setting *Permitted payment methods*, activate the option {payment-method}.
+. For the setting *Permitted payment methods*, activate the option *{payment-method}*.
 . Save (icon:save[set=plenty]) the settings.
 //end::mop-customer-class[]
