payment method include - EN

--- a/docs/en-gb/modules/markets/pages/amazon-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/amazon-setup.adoc
@@ -403,7 +403,7 @@ Defining order status for stock reservation:
 include::partial$invoice-creation.adoc[]
 
 [#4500]
-== Activating the Amazon payment method
+== Permitting payment method in a customer classes
 
 The *Amazon* payment method is used for orders that were placed on Amazon and transferred to your plentymarkets system. Do not confuse this with *Amazon Pay*, which is a way for customers to use the Amazon checkout process when placing orders in your plentyShop.
 
