--- a/docs/en-gb/modules/markets/pages/bol-com.adoc
+++ b/docs/en-gb/modules/markets/pages/bol-com.adoc
@@ -121,7 +121,7 @@ include::partial$activate-referrer.adoc[]
 include::partial$define-sales-price.adoc[]
 
 [#650]
-=== Activating the payment method
+=== Permitting payment method in a customer class
 
 :market: bol.com
 :payment-method: Bol.com
