--- a/docs/en-gb/modules/markets/pages/cdiscount.adoc
+++ b/docs/en-gb/modules/markets/pages/cdiscount.adoc
@@ -298,7 +298,7 @@ Linking manufacturers:
 . Save (icon:save[set=plenty]) the settings.
 
 [#900]
-== Activating the payment method
+== Permitting payment method in a customer class
 
 :market: Cdiscount
 :payment-method: Cdiscount
