--- a/docs/en-gb/modules/markets/pages/check24.adoc
+++ b/docs/en-gb/modules/markets/pages/check24.adoc
@@ -71,7 +71,7 @@ include::partial$sku-manually.adoc[]
 include::partial$define-sales-price.adoc[]
 
 [#700]
-=== Activating the payment method
+=== Permitting payment method in a customer class
 
 :payment-method: check24
 
@@ -358,7 +358,7 @@ include::partial$catalogue-new-to-text.adoc[]
 [#catalogue-creation]
 ==== Creating a catalogue
 
-Item data is exported to Check24 via a catalogue using the marketplace format *Check24*. To export your items to Check24, create catalogues in the *Data » Catalogue* menu. Link the Check24 data fields with item data saved in plentymarkets in the marketplace format afterwards. 
+Item data is exported to Check24 via a catalogue using the marketplace format *Check24*. To export your items to Check24, create catalogues in the *Data » Catalogue* menu. Link the Check24 data fields with item data saved in plentymarkets in the marketplace format afterwards.
 
 Check24 retrieves item data via URL. You will find this URL in your Check24 catalogue in the *Data » Catalogues* menu. After you created the catalogue, you have to <<#url-check24-catalogue, copy the URL and save it at Check24>> so that item data can be exported to Check24.
 
