--- a/docs/en-gb/modules/markets/pages/ebay-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/ebay-setup.adoc
@@ -1338,7 +1338,7 @@ Importing business policies:
 |====
 
 [#2250]
-== Activating the payment method
+== Permitting payment method in a customer class
 
 The payment method eBay purchase on invoice is appropriate for items within the price range of 1.50 € - 1.500 €. In order to use eBay purchase on invoice the item must be paid for by PayPal.
 
@@ -3455,4 +3455,3 @@ Use the import tool in the *Data » Import* menu to exchange data between plenty
 == FAQ
 
 include::partial$ebay-faq.adoc[]
-
