--- a/docs/en-gb/modules/markets/pages/limango.adoc
+++ b/docs/en-gb/modules/markets/pages/limango.adoc
@@ -185,7 +185,7 @@ If you do not enter a client, the default client is used for importing orders. +
 include::partial$activate-referrer.adoc[]
 
 [#payment-method]
-=== Activating the payment method
+=== Permitting payment method in customer classes
 
 :payment-method: limango
 
