--- a/docs/en-gb/modules/markets/pages/mytoys.adoc
+++ b/docs/en-gb/modules/markets/pages/mytoys.adoc
@@ -161,7 +161,7 @@ Select one or several warehouses that contain the products that you want to sell
 include::partial$activate-referrer.adoc[]
 
 [#payment-method]
-=== Activating the payment method
+=== Permitting payment method in customer classes
 
 :payment-method: myToys
 
