--- a/docs/en-gb/modules/markets/pages/neckermann-at-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/neckermann-at-setup.adoc
@@ -610,7 +610,7 @@ Linking product data sheet characteristic to an item:
 --
 
 [#1600]
-== Activating the payment method
+== Permitting payment method in customer classes
 
 :market: Neckermann.at
 :payment-method: Neckermann Payment
