--- a/docs/en-gb/modules/markets/pages/yatego.adoc
+++ b/docs/en-gb/modules/markets/pages/yatego.adoc
@@ -252,7 +252,7 @@ The shipping confirmation is not sent to Yatego automatically. The order must be
 ////
 
 [#900]
-== Activating the payment method
+== Permitting payment method in customer classes
 
 :market: Yatego
 :payment-method: Yatego invoice
