--- a/docs/en-gb/modules/markets/pages/best-practices-kaufland-uploading-invoices.adoc
+++ b/docs/en-gb/modules/markets/pages/best-practices-kaufland-uploading-invoices.adoc
@@ -18,7 +18,7 @@ As such, we strongly recommend that you set up this event procedure as soon as p
 
 You have to modify the invoices for Kaufland.de. Two adjustments have to be made:
 
-* Enter a note for the payment method <<Activating the payment method, Kaufland.de Payment>>. (<<#860, How?>>)
+* Enter a note for the payment method *Kaufland.de Payment*. (<<#860, How?>>)
 * Your bank details must not appear on the invoice. (<<#870, How?>>)
 
 How to carry out these adjustments is described below.
