--- a/docs/en-gb/modules/markets/pages/flubit.adoc
+++ b/docs/en-gb/modules/markets/pages/flubit.adoc
@@ -114,7 +114,7 @@ include::partial$variation-availability.adoc[]
 include::partial$define-sales-price.adoc[]
 
 [#370]
-== Activating the payment method
+== Permitting payment method in customer classes
 
 :market: Flubit
 :payment-method: Flubit
