--- a/docs/en-gb/modules/markets/pages/otto-market.adoc
+++ b/docs/en-gb/modules/markets/pages/otto-market.adoc
@@ -161,7 +161,7 @@ include::partial$activate-referrer.adoc[]
 include::partial$define-sales-price.adoc[]
 
 [#425]
-=== Activating the payment method
+=== Permitting payment method in customer classes
 
 :market: OTTO Market
 :payment-method: Otto Payment
