--- a/docs/en-gb/modules/markets/pages/plus-gartenxxl.adoc
+++ b/docs/en-gb/modules/markets/pages/plus-gartenxxl.adoc
@@ -162,7 +162,7 @@ Defining a sales price for Netto Marken-Discount:
 include::partial$shipping-profile-activate.adoc[]
 
 [#400]
-=== Activating the payment method
+=== Permitting payment method in customer classes
 
 :market: Netto Marken-Discount
 :payment-method: Netto
