--- a/docs/en-gb/modules/markets/pages/zalando.adoc
+++ b/docs/en-gb/modules/markets/pages/zalando.adoc
@@ -446,7 +446,7 @@ NOTE: You can only link one size register or one length register to each attribu
 include::partial$link-attributes.adoc[]
 
 [#800]
-== Activating the payment method
+== Permitting payment method in customer classes
 
 :market: Zalando
 :payment-method: Zalando Payment
