--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -765,9 +765,9 @@ Vorlage löschen:
 → Die Vorlage wird gelöscht.
 
 [#variablen-emailbuilder]
-== Verfügbare Variablen und twig expressions für das Code-Widget und den Betreff
+== Verfügbare Variablen und twig expressions
 
-Erfahre in den folgenden Unterkapiteln, welche Variablen dir zur Verfügung stehen und wie die dazugehörigen twig expressions lauten, die du im Code-Widget und im Betreff der Vorlage einfügen kannst.
+Erfahre in den folgenden Unterkapiteln, welche Variablen dir zur Verfügung stehen, die du in einigen der Widgets verwenden kannst, und wie die dazugehörigen twig expressions lauten. Variablen werden dann in der E-Mail an deine Kund:innen durch den korrekten Inhalt ersetzt. Die sogenannten twig expressions benötigst du für den Betreff deiner E-Mail und für das Code-Widget, da du in diesen beiden Fällen keine Variablen verwenden kannst.
 
 [#verfuegbare-variablen]
 === Verfügbare Variablen
@@ -812,7 +812,7 @@ Wenn du im Code-Widget beispielsweise mit link:https://twig.symfony.com/doc/3.x/
 
 Im Kapitel <<#code-beispiele-code-widget, Code-Beispiele für das Code-Wigdet>> findest du einige if-Abfragen, die du einfach in dein Code-Widget kopieren kannst.
 
-Möchtest du wissen, welche Variablen für die einzelnen Kategorien und Unterkategorien zur Verfügung stehen und wie die twig expressions lauten, die du im Code-Widget verwenden kannst? Dann klappe einfach die folgenden Bereiche auf (icon:expand_more[set=material]).
+Möchtest du wissen, welche Variablen für die einzelnen Kategorien und Unterkategorien zur Verfügung stehen und wie die twig expressions lauten, die du im Code-Widget und im Betreff verwenden kannst? Dann klappe einfach die folgenden Bereiche auf (icon:expand_more[set=material]).
 
 [#variablen-auftrag]
 [.collapseBox]
