--- a/docs/en-gb/modules/data/pages/elasticSync-newsletter-recipient.adoc
+++ b/docs/en-gb/modules/data/pages/elasticSync-newsletter-recipient.adoc
@@ -56,7 +56,7 @@ Enter the ID of the email address to which the newsletter is sent in your CSV fi
 
 *_Permitted import values:_* Numeric (internal ID)
 
-You can find the result of the import in the back end menu xref:crm:sending-newsletters.adoc#[*Setup » CRM » Newsletter » Emails » [Expand folder\]*] after you have carried out the search (icon:search[role="blue"]).
+You can find the result of the import in the back end menu xref:crm:sending-newsletters.adoc#[Setup » CRM » Newsletter » Emails » [Expand folder\]] after you have carried out the search (icon:search[role="blue"]).
 
 '''
 
@@ -71,7 +71,7 @@ Enter the ID of the folder in which the email address of the newsletter recipien
 
 *_Permitted import values:_* Numeric (internal ID)
 
-You can find the result of the import in the back end menu *Setup » CRM » Newsletter » Emails* in the xref:crm:sending-newsletters.adoc#[overview *Emails per folder*].
+You can find the result of the import in the back end menu *Setup » CRM » Newsletter » Emails* in the xref:crm:sending-newsletters.adoc#[overview] *Emails per folder*.
 
 '''
 
@@ -95,7 +95,7 @@ Enter the recipient’s first name in your CSV file.
 
 *_Permitted import values:_* Text
 
-You can find the result of the import in the back end menu xref:crm:sending-newsletters.adoc#[*Setup » CRM » Newsletter » Emails » [Expand folder\]*]. Then click on search (icon:search[role="blue"]) and expand (icon:plus-square-o[]) the data record. The value is saved in the *First name* field.
+You can find the result of the import in the back end menu xref:crm:sending-newsletters.adoc#[Setup » CRM » Newsletter » Emails » [Expand folder\]]. Then click on search (icon:search[role="blue"]) and expand (icon:plus-square-o[]) the data record. The value is saved in the *First name* field.
 
 '''
 
@@ -108,7 +108,7 @@ Enter the recipient’s last name in your CSV file.
 
 *_Permitted import values:_* Text
 
-You can find the result of the import in the back end menu xref:crm:sending-newsletters.adoc#[*Setup » CRM » Newsletter » Emails » [Expand folder\]*]. Then click on search (icon:search[role="blue"]) and expand (icon:plus-square-o[]) the data record. The value is saved in the *Last name* field.
+You can find the result of the import in the back end menu xref:crm:sending-newsletters.adoc#[Setup » CRM » Newsletter » Emails » [Expand folder\]]. Then click on search (icon:search[role="blue"]) and expand (icon:plus-square-o[]) the data record. The value is saved in the *Last name* field.
 
 '''
 
@@ -121,7 +121,7 @@ Enter the recipient’s email address in your CSV file.
 
 *_Permitted import values:_* Alpha-numeric
 
-You can find the result of the import in the back end menu xref:crm:sending-newsletters.adoc#[*Setup » CRM » Newsletter » Emails » [Expand folder\]*]. Then click on search (icon:search[role="blue"]) and expand (icon:plus-square-o[]) the data record. The value is saved in the *Email* field.
+You can find the result of the import in the back end menu xref:crm:sending-newsletters.adoc#[Setup » CRM » Newsletter » Emails » [Expand folder\]]. Then click on search (icon:search[role="blue"]) and expand (icon:plus-square-o[]) the data record. The value is saved in the *Email* field.
 
 '''
 
@@ -175,9 +175,9 @@ Enter the date when the recipient confirmed the newsletter receipt in your CSV f
 
 *_Default value:_* No default value
 
-*_Permitted import values:_* Date
+*_Permitted import values:_* Date and time in the format `yyyy-mm-dd 00:00:00`.
 
-You can find the result of the import in the back end menu xref:crm:sending-newsletters.adoc#[*Setup » CRM » Newsletter » Emails » [Expand folder\]*]. Then click on search (icon:search[role="blue"]) and expand (icon:plus-square-o[]) the data record. The value is saved in the *Confirmed at* field.
+You can find the result of the import in the back end menu xref:crm:sending-newsletters.adoc#[Setup » CRM » Newsletter » Emails » [Expand folder\]]. Then click on search (icon:search[role="blue"]) and expand (icon:plus-square-o[]) the data record. The value is saved in the *Confirmed at* field.
 
 '''
 
