Added chapter about catalogue preview

--- a/docs/de-de/modules/maerkte/pages/otto-market.adoc
+++ b/docs/de-de/modules/maerkte/pages/otto-market.adoc
@@ -621,6 +621,21 @@ include::partial$checklist-variations.adoc[tag=checklist-check-log]
 
 include::partial$catalogue-activation.adoc[]
 
+[#katalog-vorschau]
+=== Vorschau des Katalogs herunterladen
+
+Nachdem du einen Katalog zum ersten Mal exportiert hast, kannst du eine Vorschau des Katalogs herunterladen. Die Vorschau enthält die ersten 5 Zeilen der Exportdatei.
+
+[.instruction]
+Vorschau des Katalogs herunterladen:
+
+. Öffne das Menü *Daten » Kataloge*.
+. Öffne den Katalog, für den du eine Vorschau ansehen möchtest.
+. Klicke auf *Vorschau* (icon:preview[set=material]). +
+→ Ein Fenster zum manuellen Download der Vorschaudatei wird geöffnet.
+. Klicke auf *Herunterladen* (icon:download[set=plenty, role="darkGrey"]). +
+→ Die Datei wird heruntergeladen. Sie enthält die ersten 5 Zeilen der Exportdatei.
+
 [#1050]
 == Auftragsbearbeitung bei OTTO Market
 
