--- a/docs/de-de/modules/maerkte/pages/otto-market.adoc
+++ b/docs/de-de/modules/maerkte/pages/otto-market.adoc
@@ -624,7 +624,7 @@ include::partial$catalogue-activation.adoc[]
 [#katalog-vorschau]
 === Vorschau des Katalogs herunterladen
 
-Nachdem du einen Katalog zum ersten Mal exportiert hast, kannst du eine Vorschau des Katalogs herunterladen. Die Vorschau enthält die ersten 5 Zeilen der Exportdatei.
+Nachdem du einen Katalog zum ersten Mal exportiert hast, kannst du eine Vorschau des Katalogs herunterladen. Die Vorschau enthält die ersten 5 Varianten, die in diesem Katalog zu OTTO Market exportiert werden.
 
 [.instruction]
 Vorschau des Katalogs herunterladen:
@@ -634,7 +634,7 @@ Vorschau des Katalogs herunterladen:
 . Klicke auf *Vorschau* (icon:preview[set=material]). +
 → Ein Fenster zum manuellen Download der Vorschaudatei wird geöffnet.
 . Klicke auf *Herunterladen* (icon:download[set=plenty, role="darkGrey"]). +
-→ Die Datei wird heruntergeladen. Sie enthält die ersten 5 Zeilen der Exportdatei.
+→ Die Datei wird heruntergeladen. Sie enthält die ersten 5 Varianten des Exports.
 
 [#1050]
 == Auftragsbearbeitung bei OTTO Market
