--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -120,9 +120,11 @@ Die im Benutzerkonto im Menü *Einrichtung » Einstellungen » Benutzer » Konte
 *_Das bedeutet:_* Wenn du z.B. die Variable `Signatur im HTML-Format` in die Vorlage einfügst, wird die Signatur aus dem Benutzer:innenkonto übernommen. Wenn keine Signatur im Benutzer:innenkonto gespeichert ist, wird die Signatur, die im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Signatur* gespeichert ist, übernommen.
 ====
 
-// Prüfen --> Wenn du die Variable `Signatur im reinen Textformat` in die E-Mail-Vorlage einfügst, wird immer die Signatur, die im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Signatur* gespeichert ist, übernommen.
+//// 
+TODO: Prüfen -> Wenn du die Variable `Signatur im reinen Textformat` in die E-Mail-Vorlage einfügst, wird immer die Signatur, die im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Signatur* gespeichert ist, übernommen.
 
-// Prüfen --> Infodienst hier auch erwähnen?
+Prüfen -> Infodienst hier auch erwähnen?
+////
 
 [#ordner-verwalten]
 == Ordner verwalten
@@ -767,7 +769,26 @@ Vorlage löschen:
 [#variablen-emailbuilder]
 == Verfügbare Variablen und twig expressions
 
-Erfahre in den folgenden Unterkapiteln, welche Variablen dir zur Verfügung stehen, die du in einigen der Widgets verwenden kannst, und wie die dazugehörigen twig expressions lauten. Variablen werden dann in der E-Mail an deine Kund:innen durch den korrekten Inhalt ersetzt. Die sogenannten twig expressions benötigst du für den Betreff deiner E-Mail und für das Code-Widget, da du in diesen beiden Fällen keine Variablen verwenden kannst.
+Erfahre in den folgenden Unterkapiteln, welche Variablen dir zur Verfügung stehen, die du in einigen der Widgets verwenden kannst, und wie die dazugehörigen twig expressions lauten. Die Variablen werden dann in der E-Mail an deine Kund:innen durch den korrekten Inhalt ersetzt. Die sogenannten twig expressions benötigst du für den Betreff deiner E-Mail und für das Code-Widget, da du in diesen beiden Fällen keine Variablen verwenden kannst.
+
+[#twig-einleitung]
+=== Twig expressions für das Code-Widget und den Betreff
+
+Im Kapitel <<#verfuegbare-variablen, Verfügbare Variablen>> findest du neben den Variablen auch die twig expressions, die du im Code-Widget und im Betreff einer Vorlage verwenden kannst.
+
+[#twig-betreff]
+==== Twig expression im Betreff
+
+Wenn du eine twig expression im Betreff der Vorlage verwenden möchtest, muss diese von doppelt geschweiften Klammern umgeben sein.
+
+*_Beispiel:_* Wenn du im Betreff deiner Vorlage den Versanddienstleister anzeigen möchtest, öffnest du den aufklappbaren Bereich *Auftrag / Versand*, suchst nach der Variable *Versanddienstleister* und setzt dann die entsprechende twig expression wie folgt in den Betreff deiner Vorlage ein:  `&#123;&#8288;&#123;order.formattedShipping.providerName&#125;&#8288;&#125;`.
+
+[#twig-code-widget]
+==== Twig expression im Code-Widget
+
+Wenn du im Code-Widget beispielsweise mit link:https://twig.symfony.com/doc/3.x/tags/if.html[if-Abfragen^] arbeitest, benötigst du in der if-Abfrage selbst keine doppelt geschweiften Klammern zusätzlich, sondern nur im Fließtext. Allgemeine Informationen zu Twig findest du in der link:https://twig.symfony.com/doc/3.x/[Twig Documentation^].
+
+Im Kapitel <<#code-beispiele-code-widget, Code-Beispiele für das Code-Wigdet>> findest du einige if-Abfragen, die du einfach in dein Code-Widget kopieren kannst.
 
 [#verfuegbare-variablen]
 === Verfügbare Variablen
@@ -793,32 +814,11 @@ Die verfügbaren Variablen für den EmailBuilder sind in die folgenden Kategorie
 
 * <<#variablen-newsletter, Newsletter>>
 
-[#twig-einleitung]
-=== Twig expressions für das Code-Widget und den Betreff
-
-In den folgenden aufklappbaren Bereichen findest du neben den Variablen auch die twig expressions, die du im Code-Widget und im Betreff einer Vorlage verwenden kannst.
-
-[#twig-betreff]
-==== Twig expression im Betreff
-
-Wenn du eine twig expression im Betreff der Vorlage verwenden möchtest, muss diese von doppelt geschweiften Klammern umgeben sein.
-
-*_Beispiel:_* Wenn du im Betreff deiner Vorlage den Versanddienstleister anzeigen möchtest, öffnest du den aufklappbaren Bereich *Auftrag / Versand*, suchst nach der Variable *Versanddienstleister* und setzt dann die entsprechende twig expression wie folgt in den Betreff deiner Vorlage ein:  `&#123;&#8288;&#123;order.formattedShipping.providerName&#125;&#8288;&#125;`.
-
-[#twig-code-widget]
-==== Twig expression im Code-Widget
-
-Wenn du im Code-Widget beispielsweise mit link:https://twig.symfony.com/doc/3.x/tags/if.html[if-Abfragen^] arbeitest, benötigst du in der if-Abfrage selbst keine doppelt geschweiften Klammern zusätzlich, sondern nur im Fließtext. Allgemeine Informationen zu Twig findest du in der link:https://twig.symfony.com/doc/3.x/[Twig Documentation^].
-
-Im Kapitel <<#code-beispiele-code-widget, Code-Beispiele für das Code-Wigdet>> findest du einige if-Abfragen, die du einfach in dein Code-Widget kopieren kannst.
-
-Möchtest du wissen, welche Variablen für die einzelnen Kategorien und Unterkategorien zur Verfügung stehen und wie die twig expressions lauten, die du im Code-Widget und im Betreff verwenden kannst? Dann klappe einfach die folgenden Bereiche auf (icon:expand_more[set=material]).
-
 [#variablen-auftrag]
-[.collapseBox]
-.Variablen in der Kategorie *Auftrag*
---
+==== Auftragsvariablen allgemein
 
+[[table-variables-order-order]]
+.Variablen in der Kategorie *Auftrag*
 [cols="2,4,3"]
 |====
 |Name der Variable |Erläuterung |Twig expression
@@ -1002,13 +1002,13 @@ Der QR-Code wird in der E-Mail an deine Kund:innen als URL ausgegeben. Nach eine
 
 |====
 
---
+
 
 [#variablen-auftrag-lieferadresse]
-[.collapseBox]
-.Variablen in der Unterkategorie *Auftrag / Lieferadresse*
---
+==== Variablen Auftrag / Lieferadresse
 
+[[table-variables-order-delivery-address]]
+.Variablen in der Unterkategorie *Auftrag / Lieferadresse*
 [cols="1,3"]
 |====
 |Name der Variable |Twig expression
@@ -1066,13 +1066,11 @@ Der QR-Code wird in der E-Mail an deine Kund:innen als URL ausgegeben. Nach eine
 
 |====
 
---
-
 [#variablen-auftrag-rechnungsadresse]
-[.collapseBox]
-.Variablen in der Unterkategorie *Auftrag / Rechnungsadresse*
---
+==== Variablen Auftrag / Rechnungsadresse
 
+[[table-variables-order-invoice-address]]
+.Variablen in der Unterkategorie *Auftrag / Rechnungsadresse*
 [cols="1,3"]
 |====
 |Name der Variable |Twig expression
@@ -1130,13 +1128,12 @@ Der QR-Code wird in der E-Mail an deine Kund:innen als URL ausgegeben. Nach eine
 
 |====
 
---
 
 [#variablen-auftrag-auftragspositionen]
-[.collapseBox]
-.Variablen in der Unterkategorie *Auftrag / Auftragspositionen (nur für Artikellisten-Widget)*
---
+==== Variablen Auftrag / Auftragspositionen (nur für Artikellisten-Widget)
 
+[[table-variables-order-order-items]]
+.Variablen in der Unterkategorie *Auftrag / Auftragspositionen (nur für Artikellisten-Widget)*
 [cols="2,4,3"]
 |====
 |Name der Variable |Erläuterung |Twig expression
@@ -1400,13 +1397,12 @@ Der QR-Code wird in der E-Mail an deine Kund:innen als URL ausgegeben. Nach eine
 
 |====
 
---
 
 [#variablen-auftrag-versand]
-[.collapseBox]
-.Variablen in der Unterkategorie *Auftrag / Versand*
---
+==== Variablen Auftrag / Versand
 
+[[table-variables-order-shipping]]
+.Variablen in der Unterkategorie *Auftrag / Versand*
 [cols="2,4,3"]
 |====
 |Name der Variable |Erläuterung |Twig expression
@@ -1473,13 +1469,11 @@ Der QR-Code wird in der E-Mail an deine Kund:innen als URL ausgegeben. Nach eine
 
 |====
 
---
+[#variablen-kontakt-allgemein]
+==== Variablen Kontakt allgemein
 
-[#variablen-kontakt]
-[.collapseBox]
+[[table-variables-order-contact]]
 .Variablen in der Kategorie *Kontakt*
---
-
 [cols="2,4,3"]
 |====
 |Name der Variable |Erläuterung |Twig expression
@@ -1578,13 +1572,11 @@ Im Kontaktdatensatz wird zusätzlich zum Datum im Format `tt-mm-jjjj` der Zeitst
 
 |====
 
---
-
 [#variablen-kontakt-lieferadresse]
-[.collapseBox]
-.Variablen in der Unterkategorie *Kontakt / Lieferadresse*
---
+==== Variablen Kontakt / Lieferadresse
 
+[[table-variables-order-contact-delivery-address]]
+.Variablen in der Unterkategorie *Kontakt / Lieferadresse*
 [cols="1,3"]
 |====
 |Name der Variable |Twig expression
@@ -1639,13 +1631,11 @@ Im Kontaktdatensatz wird zusätzlich zum Datum im Format `tt-mm-jjjj` der Zeitst
 
 |====
 
---
-
 [#variablen-kontakt-rechnungsadresse]
-[.collapseBox]
-.Variablen in der Unterkategorie *Kontakt / Rechnungsadresse*
---
+==== Variablen Kontakt / Rechnungsadresse
 
+[[table-variables-order-contact-invoice-address]]
+.Variablen in der Unterkategorie *Kontakt / Rechnungsadresse*
 [cols="1,3"]
 |====
 |Name der Variable |Twig expression
@@ -1700,13 +1690,11 @@ Im Kontaktdatensatz wird zusätzlich zum Datum im Format `tt-mm-jjjj` der Zeitst
 
 |====
 
---
-
 [#variablen-kontakt-optionen]
-[.collapseBox]
-.Variablen in der Unterkategorie *Kontakt / Optionen*
---
+==== Variablen Kontakt / Optionen
 
+[[table-variables-order-contact-options]]
+.Variablen in der Unterkategorie *Kontakt / Optionen*
 [cols="1,3"]
 |====
 |Name der Variable |Twig expression
@@ -1746,13 +1734,11 @@ Im Kontaktdatensatz wird zusätzlich zum Datum im Format `tt-mm-jjjj` der Zeitst
 
 |====
 
---
-
 [#variablen-global]
-[.collapseBox]
-.Variablen in der Kategorie *Global*
---
+==== Variablen Global
 
+[[table-variables-global]]
+.Variablen in der Kategorie *Global*
 [cols="2,5,2"]
 |====
 |Name der Variable |Erläuterung |Twig expression
@@ -1896,13 +1882,14 @@ Alternativ findest du die gespeicherte IBAN im Menü *Einrichtung » Einstellung
 
 |====
 
---
+
 
 [#variablen-newsletter]
-[.collapseBox]
-.Variablen in der Kategorie *Newsletter*
---
+==== Variablen Newsletter
 
+
+[[table-variables-newsletter]]
+.Variablen in der Kategorie *Newsletter*
 [cols="2,5,2"]
 |====
 |Name der Variable |Erläuterung |Twig expression
@@ -1921,7 +1908,7 @@ Alternativ findest du die gespeicherte IBAN im Menü *Einrichtung » Einstellung
 
 |====
 
---
+
 
 [#e-mail-versand-automatisieren]
 == E-Mail-Versand automatisieren
